--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start": "node index.js",
     "start:dev": "nodemon index.js",
-    "build":"tsc"
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
     "nodemon": "^3.1.9"
