--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "start:dev": "nodemon index.js",
-    "build": "tsc"
+    "build": "echo 'No build step required'"
   },
   "author": "",
   "license": "ISC",
