--- a/package.json
+++ b/package.json
@@ -1,3 +1,26 @@
+// {
+//   "name": "wolf-tma-on-code",
+//   "version": "1.0.0",
+//   "main": "index.js",
+//   "type": "module",
+//   "scripts": {
+//     "start": "node index.js",
+//     "start:dev": "nodemon index.js",
+//     "build": "echo 'No build step required'"
+//   },
+//   "author": "",
+//   "license": "ISC",
+//   "description": "",
+//   "dependencies": {
+//     "cors": "^2.8.5",
+//     "dotenv": "^16.4.7",
+//     "express": "^4.21.2",
+//     "mongoose": "^8.12.1",
+//     "nodemon": "^3.1.9"
+//   }
+// }
+
+// сгенерил в deepSeek
 {
   "name": "wolf-tma-on-code",
   "version": "1.0.0",
@@ -6,7 +29,10 @@
   "scripts": {
     "start": "node index.js",
     "start:dev": "nodemon index.js",
-    "build": "echo 'No build step required'"
+    "build": "npm install --production && npm cache clean --force",
+    "serve": "pm2 start index.js --name 'my-app'",
+    "stop": "pm2 stop my-app",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +41,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.12.1",
-    "nodemon": "^3.1.9"
+    "mongoose": "^8.12.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "eslint": "^8.56.0" // Если используешь ESLint
   }
 }
