--- a/package.json
+++ b/package.json
@@ -1,26 +1,3 @@
-// {
-//   "name": "wolf-tma-on-code",
-//   "version": "1.0.0",
-//   "main": "index.js",
-//   "type": "module",
-//   "scripts": {
-//     "start": "node index.js",
-//     "start:dev": "nodemon index.js",
-//     "build": "echo 'No build step required'"
-//   },
-//   "author": "",
-//   "license": "ISC",
-//   "description": "",
-//   "dependencies": {
-//     "cors": "^2.8.5",
-//     "dotenv": "^16.4.7",
-//     "express": "^4.21.2",
-//     "mongoose": "^8.12.1",
-//     "nodemon": "^3.1.9"
-//   }
-// }
-
-// сгенерил в deepSeek
 {
   "name": "wolf-tma-on-code",
   "version": "1.0.0",
@@ -45,6 +22,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
-    "eslint": "^8.56.0" // Если используешь ESLint
+    "eslint": "^8.56.0"
   }
 }
